tests/errors/null_to_nonnull_assignment.dang
# Null cannot initialize a non-null field
value: String! = null
